--- a/src/css/navigation.styl
+++ b/src/css/navigation.styl
@@ -156,10 +156,12 @@
   padding 12px 15px
   max-width none
   margin-right 0!important
+  cursor pointer
   p
     margin-bottom 0
     margin-top 0
-    cursor pointer
+  &:hover
+    background-color #eee
 
 .subscription-authentication
   padding-left 0
